tests/baselines/reference/packageJsonExportsOptionsCompat.errors.txt
/tsconfig.json(3,25): error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
/tsconfig.json(4,5): error TS5098: Option 'customConditions' can only be used when 'moduleResolution' is set to 'node16', 'nodenext', or 'bundler'.
/tsconfig.json(5,5): error TS5098: Option 'resolvePackageJsonExports' can only be used when 'moduleResolution' is set to 'node16', 'nodenext', or 'bundler'.
/tsconfig.json(6,5): error TS5098: Option 'resolvePackageJsonImports' can only be used when 'moduleResolution' is set to 'node16', 'nodenext', or 'bundler'.


==== /tsconfig.json (4 errors) ====
    {
      "compilerOptions": {
        "moduleResolution": "classic",
                            ~~~~~~~~~
!!! error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
        "customConditions": ["webpack", "browser"],
        ~~~~~~~~~~~~~~~~~~
!!! error TS5098: Option 'customConditions' can only be used when 'moduleResolution' is set to 'node16', 'nodenext', or 'bundler'.
        "resolvePackageJsonExports": true,
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS5098: Option 'resolvePackageJsonExports' can only be used when 'moduleResolution' is set to 'node16', 'nodenext', or 'bundler'.
        "resolvePackageJsonImports": true,
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS5098: Option 'resolvePackageJsonImports' can only be used when 'moduleResolution' is set to 'node16', 'nodenext', or 'bundler'.
        "noEmit": true
      }
    }
    
==== /index.ts (0 errors) ====
    